// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Select/SelectOptionMenuItem component render fine with customize renderer 1`] = `
<li>
  <span />
</li>
`;

exports[`components/Select/SelectOptionMenuItem component renders fine 1`] = `
<li>
  <div
    className="test-menu-option-item test-menu-option-item__active test-menu-option-item__selected"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    option memu item 1
  </div>
</li>
`;

exports[`components/Select/SelectOptionMenuItem component renders fine if option is disabled 1`] = `
<li>
  <div
    className="test-menu-disabled-option-item test-menu-disabled-option-item__selected test-menu-disabled-option-item__disabled"
  >
    option memu item 1
  </div>
</li>
`;
